[package]
name = "frnsc-triage"
version = "0.1.0"
edition = "2021"

[dependencies]
forensic-rs = "0.5.2"
frnsc-liveregistry-rs = "0.2.0"
regex = "1.8.4"
zip = {version = "0.6.6", features = ["deflate"]}

[dependencies.windows]
version = "0.48"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
]
