[package]
name = "frnsc-triage"
version = "0.13.0"
edition = "2021"

[dependencies]
forensic-rs = "0.13"
frnsc-liveregistry-rs = "0.13"
regex = "1"
zip = {version = "0.6", features = ["deflate"]}

[dependencies.windows]
version = "0.58"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Storage_FileSystem",
]
